--- a/index.html
+++ b/index.html
@@ -13,6 +13,62 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Section Start Here -->
+    <section class="container-fluid">
+        <div class="row">
+            <!-- Left Sidebar Start Here -->
+            <div class="col-md-3 col-lg-3 col-xl-2">
+                <section class="leftSidebar">
+                    <!-- Sidebar Link Start Here -->
+                    <nav class="nav flex-column">
+                        <a href="#" class="logo">
+                            <i class="bi bi-twitter"></i>
+                        </a>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">
+                                <i class="bi bi-house-fill"></i> home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-hash"></i> explore
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-bell"></i> notification
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-envelope"></i> message
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-bookmark"></i> bookmark
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-card-list"></i> list
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-person"></i> profile
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="bi bi-three-dots"></i> more
+                            </a>
+                        </li>
+                    </nav>
+                    <button class="btn btn-primary w-100 my-3">Twitter</button>
+                    <!-- Navbar Link End Here -->
+                </section>
+            </div>
+            <!-- Left Sdebar End Here -->
 </body>
 </html>
