--- a/index.html
+++ b/index.html
@@ -70,5 +70,170 @@
                 </section>
             </div>
             <!-- Left Sdebar End Here -->
+
+            <!-- Main Section Start Here -->
+            <main class="col-md-9 col-lg-6 col-xl-7 py-5">
+                <!-- Hero Section Start -->
+                <div class="hero bg-white">
+                    <div class="border">
+                        <div class="d-flex justify-content-between align-items-center px-3 pt-3">
+                            <h4>Home</h4>
+                            <a href="#">
+                                <i class="bi bi-magic"></i>
+                            </a>
+                        </div>
+                        <hr>
+                        <div class="d-flex justify-content-start p-3">
+                            <div>
+                                <a href="#" class="icon-img">
+                                    <img src="images/users/user-1.jpg" alt="Profile Image">
+                                </a>
+                            </div>
+                            <div class="w-100">
+                                <form action="">
+                                    <input type="text" class="form-control border-0 bg-transparent" placeholder="What's Happining ?">
+
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <ul type="none" class="home-link">
+                                            <li>
+                                                <a href="#"><i class="bi bi-card-image"></i></a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="bi bi-file-earmark-image"></i></a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="bi bi-list"></i></a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="bi bi-emoji-smile"></i></a>
+                                            </li>
+                                            <li>
+                                                <i class="bi bi-calendar-check"></i>
+                                            </li>
+                                        </ul>
+                                        <button class="btn btn-primary" type="submit">Tweet</button>
+                                    </div>
+                                </form>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Hero Section End -->
+
+                <!-- Post Section Start Here -->
+                <section class="mt-3 post border p-3 d-flex justify-content-start bg-white">
+                    <a href="#" class="icon-img d-inline-block me-3">
+                        <img src="images/users/user-2.jpg" alt="Profile Image">
+                    </a>
+                    <div class="d-inline-block">
+                        <p><span class="h5">Alex white</span> <a href="#">@lamoliva</a> <span class="ms-1 text-muted">58 mins</span></p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur ad minima explicabo eligendi doloribus ipsa, quasi sapiente! Provident</p>
+                        <div class="d-flex justify-content-between">
+                            <a href="#">
+                                <i class="bi bi-chat"></i>
+                                <span>109</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-share"></i>
+                                <span>20K</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-heart"></i>
+                                <span>106K</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </div>
+                </section>
+                <!-- Post Section End Here -->
+
+
+                <!-- Post Section Start Here -->
+                <section class="post border p-3 d-flex justify-content-start bg-light">
+                    <a href="#" class="icon-img d-inline-block me-3">
+                        <img src="images/users/user-3.jpg" alt="Profile Image">
+                    </a>
+                    <div class="w-100">
+                        <p><span class="h5">John Clark</span> <a href="#">@jclark</a> <span class="ms-1 text-muted">01 hrs</span></p>
+                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit?</p>
+                        <div class="mb-2">
+                            <a href="#" class="tag text-primary">#100dayofcode</a>
+                            <a href="#" class="tag text-primary">#bootstrap</a>
+                            <a href="#" class="tag text-primary">#materlize css</a>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <a href="#">
+                                <i class="bi bi-chat"></i>
+                                <span>109</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-share"></i>
+                                <span>20K</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-heart"></i>
+                                <span>106K</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </div>
+                </section>
+                <!-- Post Section End Here -->
+
+                <!-- Post Section Start Here -->
+                <section class="post border p-3 d-flex justify-content-start">
+                    <a href="#" class="icon-img d-inline-block me-3">
+                        <img src="images/users/user-4.jpg" alt="Profile Image">
+                    </a>
+                    <div class="w-100">
+                        <p><span class="h5">John Deo</span> <a href="#">@Beautifyhouse</a> <span class="ms-1 text-muted">1.5 hrs</span></p>
+                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit?</p>
+                        <div class="mb-2">
+                            <a href="#" class="tag text-primary">#100dayofcode</a>
+                            <a href="#" class="tag text-primary">#bootstrap</a>
+                            <a href="#" class="tag text-primary">#materlize css</a>
+                        </div>
+                        <div class="post-img rounded-3 overflow-hidden my-3">
+                            <img src="images/main-img.png" alt="Post Image">
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <a href="#">
+                                <i class="bi bi-chat"></i>
+                                <span>109</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-share"></i>
+                                <span>20K</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-heart"></i>
+                                <span>106K</span>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </div>
+                </section>
+                <!-- Post Section End Here -->
+            </main>
+            <!-- Main Section End Here -->
+
+            <!-- Right Sidebar Start Here -->
+            <div class="col-md-12 col-lg-3 col-xl-3 d-none d-lg-block">
+                <section class="rightSidebar">
+                    <!-- Search Bar Start -->
+                    <div>
+                        <form action="" class="searchbar">
+                            <input type="search" class="form-control bg-light rounded-pill" placeholder="Search witter" id="search">
+                            <label for="search"><i class="bi bi-search"></i></label>
+                        </form>
+                    </div>
+                    <!-- Searchbar Search End  -->
 </body>
 </html>
