--- a/index.html
+++ b/index.html
@@ -235,5 +235,76 @@
                         </form>
                     </div>
                     <!-- Searchbar Search End  -->
+
+                    <!-- Sidebar Link Start Here -->
+                    <div class="bg-light rounded-3 py-3">
+                        <div class="d-flex justify-content-between align-items-center px-3">
+                            <h5 class="mb-0">Trend For You</h5>
+                            <i class="bi bi-gear-fill"></i>
+                        </div>
+                        <hr>
+                        <ul type="none" class="p-0">
+                            <li class="px-3">
+                                <div class="trend-item">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="text-muted mb-1">Tranding in ninja</p>
+                                        <i class="bi bi-caret-down-fill"></i>
+                                    </div>
+                                    <h5 class="mb-0">#BBNinja</h5>
+                                    <p class="text-muted">247K Tweets</p>
+                                </div>
+                            </li>
+                            <hr>
+                            <li class="px-3">
+                                <div class="trend-item">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="text-muted mb-1">Tranding in ninja</p>
+                                        <i class="bi bi-caret-down-fill"></i>
+                                    </div>
+                                    <h5 class="mb-0">#DOra</h5>
+                                    <p class="text-muted">47K Tweets</p>
+                                </div>
+                            </li>
+                            <hr>
+                            <li class="px-3">
+                                <div class="trend-item">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="text-muted mb-1">Tranding in ninja</p>
+                                        <i class="bi bi-caret-down-fill"></i>
+                                    </div>
+                                    <h5 class="mb-0">#TFT</h5>
+                                    <p class="text-muted">27K Tweets</p>
+                                </div>
+                            </li>
+                            <hr>
+                            <li class="px-3">
+                                <div class="trend-item">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="text-muted mb-1">Tranding in ninja</p>
+                                        <i class="bi bi-caret-down-fill"></i>
+                                    </div>
+                                    <h5 class="mb-0">#Lover</h5>
+                                    <p class="text-muted">24K Tweets</p>
+                                </div>
+                            </li>
+                            <hr>
+                            <li>
+                                <a href="#" class="px-3 h6">Show More</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Sidebar Link End Here -->
+                </section>
+            </div>
+            <!-- Right Sidebar End Here -->
+        </div>
+    </section>
+    <!-- Section End Here -->
+    <!-- *************** JavaScript Files *************** -->
+
+    <!-- Popper JS Added -->
+    <script src="js/popper.min.js"></script>
+    <!-- Bootstrap 5.1.3 JS Added -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
